--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:weightSum="10"
     tools:context="com.example.eka.webtoon.MainActivity">
-<GridView
-    android:id="@+id/gridview"
-    android:numColumns="auto_fit"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"></GridView>
-
+    <android.support.design.widget.TabLayout
+        android:layout_weight="1.5"
+        android:id="@+id/tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:tabIndicatorHeight="1dp"/>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_weight="8.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
 </LinearLayout>
