--- a/app/src/main/res/layout/web_toon_list.xml
+++ b/app/src/main/res/layout/web_toon_list.xml
@@ -17,4 +17,11 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <TextView
+        android:text="2134"
+        android:id="@+id/toon_artist"
+        android:textSize="15sp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
