--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,41 @@
     android:orientation="vertical"
     android:weightSum="10"
     tools:context="com.example.eka.webtoon.MainActivity">
+    <RelativeLayout
+        android:layout_weight="3.1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/topviewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <TextView
+            android:text="이달의 신작 웹툰"
+            android:textSize="20sp"
+            android:textColor="#000"
+            android:layout_margin="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
     <android.support.design.widget.TabLayout
-        android:layout_weight="1.5"
+        android:layout_weight="0.8"
         android:id="@+id/tablayout"
+        android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:tabIndicatorHeight="1dp"/>
+        app:tabIndicatorHeight="3dp"
+        app:tabIndicatorColor="#999">
+
+    </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
-        android:layout_weight="8.5"
+        android:layout_weight="5.1"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
+    <android.support.v4.widget.Space
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
 </LinearLayout>
