--- a/app/src/main/res/layout/web_toon_list.xml
+++ b/app/src/main/res/layout/web_toon_list.xml
@@ -2,10 +2,12 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/item">
 
     <ImageView
+        android:layout_marginTop="7dp"
         android:layout_gravity="center"
         android:id="@+id/toon_img"
         android:layout_width="83dp"
@@ -14,14 +16,16 @@
         android:id="@+id/toon_name"
         android:text="1234"
         android:textSize="15sp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textColor="#555"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="18dp" />
     <TextView
         android:text="2134"
         android:id="@+id/toon_artist"
-        android:textSize="15sp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textSize="10sp"
+        android:textColor="#888"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="18dp" />
 </LinearLayout>
