--- a/app/src/main/res/drawable/item.xml
+++ b/app/src/main/res/drawable/item.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle" >
-            <stroke android:color="#333" android:width="2dp"/>
+            <stroke android:color="#ccc" android:width="1dp"/>
         </shape>
     </item>
 </selector>
