--- a/app/src/main/res/layout/web_toon_list.xml
+++ b/app/src/main/res/layout/web_toon_list.xml
@@ -3,29 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/item">
 
     <ImageView
-        android:layout_marginTop="7dp"
-        android:layout_gravity="center"
+        android:scaleType="fitXY"
         android:id="@+id/toon_img"
-        android:layout_width="83dp"
-        android:layout_height="90dp" />
+        android:layout_marginTop="1dp"
+        android:layout_width="fill_parent"
+        android:layout_height="110dp" />
     <TextView
         android:id="@+id/toon_name"
         android:text="1234"
+        android:layout_marginLeft="3dp"
         android:textSize="15sp"
-        android:textColor="#555"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="18dp" />
+        android:textColor="#000"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content" />
     <TextView
         android:text="2134"
         android:id="@+id/toon_artist"
-        android:textSize="10sp"
+        android:layout_marginLeft="5dp"
+        android:textSize="13sp"
         android:textColor="#888"
         android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="18dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
