--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,53 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="10"
     tools:context="com.example.eka.webtoon.MainActivity">
-        <RelativeLayout
-            android:layout_weight="3.3"
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            >
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="10">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3.3">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/topviewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true" />
+
+                <com.example.eka.webtoon.CustomIndicator
+                    android:id="@+id/cutomindicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true">
+
+                </com.example.eka.webtoon.CustomIndicator>
+            </RelativeLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tablayout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.7"
+                android:background="#fff"
+                app:tabIndicatorColor="#999"
+                app:tabIndicatorHeight="3dp">
+
+            </android.support.design.widget.TabLayout>
 
             <android.support.v4.view.ViewPager
-                android:id="@+id/topviewpager"
+                android:id="@+id/viewpager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-            <com.example.eka.webtoon.CustomIndicator
-                android:id="@+id/cutomindicator"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp"
+                android:layout_weight="5.2" />
 
-            </com.example.eka.webtoon.CustomIndicator>
-        </RelativeLayout>
-
-        <android.support.design.widget.TabLayout
-            android:layout_weight="0.7"
-            android:id="@+id/tablayout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="#fff"
-            app:tabIndicatorColor="#999"
-            app:tabIndicatorHeight="3dp">
-
-        </android.support.design.widget.TabLayout>
-
-    <android.support.v4.view.ViewPager
-        android:layout_weight="5.2"
-        android:id="@+id/viewpager"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        />
-
-    <android.support.v4.widget.Space
-        android:layout_weight="0.8"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
-</LinearLayout>
+            <android.support.v4.widget.Space
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.8" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
