--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <ImageView
         android:id="@+id/top_img"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
     <!--<TextView-->
-        <!--android:id="@+id/top_name"-->
-        <!--android:layout_marginTop="50dp"-->
-        <!--android:layout_marginLeft="15dp"-->
-        <!--android:textColor="#000"-->
-        <!--android:textSize="20sp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
+    <!--android:id="@+id/top_name"-->
+    <!--android:layout_marginTop="50dp"-->
+    <!--android:layout_marginLeft="15dp"-->
+    <!--android:textColor="#000"-->
+    <!--android:textSize="20sp"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content" />-->
     <!--<TextView-->
-        <!--android:id="@+id/top_artist"-->
-        <!--android:textColor="#000"-->
-        <!--android:layout_marginTop="74dp"-->
-        <!--android:layout_marginLeft="20dp"-->
-        <!--android:textSize="17sp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
+    <!--android:id="@+id/top_artist"-->
+    <!--android:textColor="#000"-->
+    <!--android:layout_marginTop="74dp"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:textSize="17sp"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content" />-->
     <!--<TextView-->
-        <!--android:id="@+id/top_contents"-->
-        <!--android:textColor="#000"-->
-        <!--android:layout_marginTop="110dp"-->
-        <!--android:layout_marginLeft="30dp"-->
-        <!--android:textSize="12sp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
+    <!--android:id="@+id/top_contents"-->
+    <!--android:textColor="#000"-->
+    <!--android:layout_marginTop="110dp"-->
+    <!--android:layout_marginLeft="30dp"-->
+    <!--android:textSize="12sp"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content" />-->
 </RelativeLayout>
