--- a/app/src/main/res/layout/web_toon_list.xml
+++ b/app/src/main/res/layout/web_toon_list.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/item">
+    android:background="@drawable/item"
+    android:orientation="vertical">
 
     <ImageView
-        android:scaleType="fitXY"
         android:id="@+id/toon_img"
-        android:layout_marginTop="1dp"
         android:layout_width="fill_parent"
-        android:layout_height="110dp" />
+        android:layout_height="110dp"
+        android:layout_marginTop="1dp"
+        android:scaleType="fitXY" />
+
     <TextView
         android:id="@+id/toon_name"
-        android:text="1234"
-        android:layout_marginLeft="3dp"
-        android:textSize="15sp"
-        android:textColor="#000"
         android:layout_width="200dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="3dp"
+        android:text="1234"
+        android:textColor="#000"
+        android:textSize="15sp" />
+
     <TextView
-        android:text="2134"
         android:id="@+id/toon_artist"
-        android:layout_marginLeft="5dp"
-        android:textSize="13sp"
-        android:textColor="#888"
-        android:gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:gravity="center"
+        android:text="2134"
+        android:textColor="#888"
+        android:textSize="13sp" />
 </LinearLayout>
